// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavSub should match snapshot for each location from the getSubMenuText array 1`] = `
<DocumentFragment>
  <div
    class="position-fixed"
    style="margin-top: 58px; background-color: rgb(51, 51, 51); color: white; padding: 1rem; z-index: 5; width: 100%;"
  >
    <table
      class="react-reveal"
      style="opacity: 1;"
    >
      <tbody>
        <tr
          style="vertical-align: top;"
        >
          <td
            style="color: rgb(255, 213, 0); font-weight: bold; padding-right: 1rem;"
          >
            root
          </td>
          <td>
            root
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`NavSub should match snapshot for each location from the getSubMenuText array 2`] = `
<DocumentFragment>
  <div
    class="position-fixed"
    style="margin-top: 58px; background-color: rgb(51, 51, 51); color: white; padding: 1rem; z-index: 5; width: 100%;"
  >
    <table
      class="react-reveal"
      style="opacity: 1;"
    >
      <tbody>
        <tr
          style="vertical-align: top;"
        >
          <td
            style="color: rgb(255, 213, 0); font-weight: bold; padding-right: 1rem;"
          >
            Home
          </td>
          <td>
            Choose an item from the list below.
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`NavSub should match snapshot for each location from the getSubMenuText array 3`] = `
<DocumentFragment>
  <div
    class="position-fixed"
    style="margin-top: 58px; background-color: rgb(51, 51, 51); color: white; padding: 1rem; z-index: 5; width: 100%;"
  >
    <table
      class="react-reveal"
      style="opacity: 1;"
    >
      <tbody>
        <tr
          style="vertical-align: top;"
        >
          <td
            style="color: rgb(255, 213, 0); font-weight: bold; padding-right: 1rem;"
          >
            Redux Counter Prototype
          </td>
          <td>
            An over-engineered counter as a sandbox for learning Redux.
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`NavSub should match snapshot for each location from the getSubMenuText array 4`] = `
<DocumentFragment>
  <div
    class="position-fixed"
    style="margin-top: 58px; background-color: rgb(51, 51, 51); color: white; padding: 1rem; z-index: 5; width: 100%;"
  >
    <table
      class="react-reveal"
      style="opacity: 1;"
    >
      <tbody>
        <tr
          style="vertical-align: top;"
        >
          <td
            style="color: rgb(255, 213, 0); font-weight: bold; padding-right: 1rem;"
          >
            Trilliant Executive Summary
          </td>
          <td>
            A live data table with all the bells and whistles.
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`NavSub should match snapshot for each location from the getSubMenuText array 5`] = `
<DocumentFragment>
  <div
    class="position-fixed"
    style="margin-top: 58px; background-color: rgb(51, 51, 51); color: white; padding: 1rem; z-index: 5; width: 100%;"
  >
    <table
      class="react-reveal"
      style="opacity: 1;"
    >
      <tbody>
        <tr
          style="vertical-align: top;"
        >
          <td
            style="color: rgb(255, 213, 0); font-weight: bold; padding-right: 1rem;"
          >
            Word Counter
          </td>
          <td>
            Type is some words and watch the count change! Exciting, right?
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`NavSub should match snapshot for each location from the getSubMenuText array 6`] = `
<DocumentFragment>
  <div
    class="position-fixed"
    style="margin-top: 58px; background-color: rgb(51, 51, 51); color: white; padding: 1rem; z-index: 5; width: 100%;"
  >
    <table
      class="react-reveal"
      style="opacity: 1;"
    >
      <tbody>
        <tr
          style="vertical-align: top;"
        >
          <td
            style="color: rgb(255, 213, 0); font-weight: bold; padding-right: 1rem;"
          >
            Gif Caller
          </td>
          <td>
            A Giphy API caller using Async React Hooks.
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`NavSub should match snapshot for each location from the getSubMenuText array 7`] = `
<DocumentFragment>
  <div
    class="position-fixed"
    style="margin-top: 58px; background-color: rgb(51, 51, 51); color: white; padding: 1rem; z-index: 5; width: 100%;"
  >
    <table
      class="react-reveal"
      style="opacity: 1;"
    >
      <tbody>
        <tr
          style="vertical-align: top;"
        >
          <td
            style="color: rgb(255, 213, 0); font-weight: bold; padding-right: 1rem;"
          >
            Fizz Buzz
          </td>
          <td>
            A React version of a classic Javascript puzzle.
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
